--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Red+Hat+Mono:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Red+Hat+Mono:wght@300&display=swap"
+        rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <!-- Theme included stylesheets -->
@@ -35,6 +36,9 @@
                             <div class="handler text-center">
                                 <a href="#"><i class="fa fa-angle-down"></i></a>
                             </div>
+                            <div class="oval text-center">
+                                <span>JA</span>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -42,40 +46,48 @@
                     <div class="chapter-title" id="chapter-title-1" data-chapter-num="1">
                         <div class="input_field">
                             <div class="title d-flex flex-row-reverse">
-                              <input class="content w-100" value="First Chapter" placeholder="Add chapter title" disabled/>
-                              <span class="chapterNumber">1.</span>
+                                <input class="content w-100" value="First Chapter" placeholder="Add chapter title"
+                                    disabled />
+                                <span class="chapterNumber">1.</span>
                             </div>
                             <div class="icons">
-                              <i class="fa-solid fa-pen"></i>
-                              <i class="fa-solid fa-trash"></i>
+                                <i class="fa-solid fa-pen"></i>
+                                <i class="fa-solid fa-trash"></i>
                             </div>
                         </div>
                         <div class="progressbar-back w-100">
                             <div class="progressbar-val"></div>
                         </div>
-                    </div>                
+                    </div>
                     <!-- JS -> add new chapter -->
                 </div>
 
                 <div class="accordion" id="accordionContainer">
 
                     <div class="accordion-item rounded-0" id="chapter-accordion-1">
-                        <h2 class="accordion-header align-items-center d-flex flex-row-reverse" id="heading-1" >
-                            <input class="accordion-button content px-1 rounded-0" type="text" data-bs-toggle="collapse"
-                                data-bs-target="#collapse-1" aria-expanded="true" aria-controls="collapse-1" value="First Chapter" placeholder="Add chapter title" disabled />
-                            <span class="chapterNumber">1.</span>
-                        </h2>
+
+                        <div class="box d-flex align-items-center w-100">
+                            <h2 class="accordion-header align-items-center d-flex flex-row-reverse" id="heading-1">
+                                <input class="accordion-button content px-1 rounded-0" type="text" data-bs-toggle="collapse"
+                                    data-bs-target="#collapse-1" aria-expanded="true" aria-controls="collapse-1"
+                                    value="First Chapter" placeholder="Add chapter title" disabled />
+                                <span class="chapterNumber">1.</span>
+                            </h2>
+                            <div class="handl text-center accordion-header">
+                                <i class="fa fa-angle-down"></i>
+                            </div>
+                        </div>
                         <div class="progressbar-back">
                             <div class="progressbar-val"></div>
-                        </div>    
-                        <div id="collapse-1" class="accordion-collapse px-2 rounded-0 collapse show" aria-labelledby="heading-1"
-                          data-bs-parent="#accordionContainer">
-                          <div class="accordion-body col-primary-dark">
-                            <div class="editor px-2"> </div>
-                          </div>
+                        </div>
+                        <div id="collapse-1" class="accordion-collapse px-2 rounded-0 collapse show"
+                            aria-labelledby="heading-1" data-bs-parent="#accordionContainer">
+                            <div class="accordion-body col-primary-dark">
+                                <div class="editor px-2"> </div>
+                            </div>
                         </div>
                     </div>
-                    
+
                     <!-- JS -> add new Mobile chapter -->
                 </div>
 
@@ -141,7 +153,7 @@
 
         </div>
     </div>
-     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Main Quill library -->
     <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
     <script src="js/main.js"></script>
