--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 
                     <div class="accordion-item rounded-0" id="chapter-accordion-1">
 
-                        <div class="box d-flex align-items-center w-100">
-                            <h2 class="accordion-header align-items-center d-flex flex-row-reverse" id="heading-1">
+                        <div class="box d-flex align-items-center justify-content-between">
+                            <h2 class="accordion-header align-items-center d-flex flex-row-reverse w-100" id="heading-1">
                                 <input class="accordion-button content px-1 rounded-0" type="text" data-bs-toggle="collapse"
                                     data-bs-target="#collapse-1" aria-expanded="true" aria-controls="collapse-1"
                                     value="First Chapter" placeholder="Add chapter title" disabled />
