--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
                     <!-- JS -> add new chapter -->
                 </div>
                 <div class="hand text-end accordion-header">
-                    <i class="fa fa-angle-down"></i>
+                    <i class="fa fa-angle-up"></i>
                 </div>
-                <div class="accordion" id="accordionContainer">
-                    <div class="accordion-item rounded-0" id="chapter-accordion-1">
+                <div class="accordion accordion-flush" id="accordionContainer">
+                    <div class="accordion-item rounded-0" id="chapter-accordion-1" onclick="accordionClick(event)">
                         <div class="box d-flex align-items-center justify-content-between">
                           <h2 class="accordion-header align-items-center d-flex flex-row-reverse w-100" id="heading-1">
                             <input class="accordion-button content px-1 rounded-0" type="text" data-bs-toggle="collapse"
@@ -74,13 +74,13 @@
                             <span class="chapterNumber">1.</span>
                           </h2>
                           <div class="handl text-center accordion-header">
-                            <i class="fa fa-angle-down" id="arrow-1"></i>
+                            <i class="fa fa-angle-down a-down d-none" id="arrow-1"></i>
                           </div>
                         </div>
                         <div class="progressbar-back">
                           <div class="progressbar-val"></div>
                         </div>
-                        <div id="collapse-1" class="accordion-collapse px-2 rounded-0 collapse show"
+                        <div id="collapse-1" class="accordion-collapse px-2 rounded-0 collapse"
                           aria-labelledby="heading-1" data-bs-parent="#accordionContainer">
                           <div class="accordion-body col-primary-dark">
                             <div class="editor px-2"> </div>
