--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                             <span class="chapterNumber">1.</span>
                           </h2>
                           <div class="handl text-center accordion-header">
-                            <i class="fa fa-angle-down a-down d-none" id="arrow-1"></i>
+                            <i class="fa fa-angle-down a-down d-none" ></i>
                           </div>
                         </div>
                         <div class="progressbar-back">
